--- a/src/app/back/seller/pages/products/tabs/data/data.component.html
+++ b/src/app/back/seller/pages/products/tabs/data/data.component.html
@@ -1,3 +1,56 @@
-<p>
-  data works!
-</p>
+<div class="tab-data product-tab">
+	<md-form-field>
+		<input mdInput placeholder="Model">
+	</md-form-field>
+
+	<md-form-field>
+		<input mdInput placeholder="SKU">
+	</md-form-field>
+
+	<md-form-field>
+		<input mdInput placeholder="UPC">
+	</md-form-field>
+
+	<md-form-field>
+		<input mdInput placeholder="EAN">
+	</md-form-field>
+
+	<md-form-field>
+		<input mdInput placeholder="JAN">
+	</md-form-field>
+
+	<md-form-field>
+		<input mdInput placeholder="ISBN">
+	</md-form-field>
+
+	<md-form-field>
+		<input mdInput placeholder="MPN">
+	</md-form-field>
+
+	<md-form-field>
+		<input mdInput placeholder="Manufacturer">
+	</md-form-field>
+
+	<md-select placeholder="Tax Class">
+		<md-option *ngFor="let tax of ['Taxable Goods', 'Downloadable Products']" value="{{tax}}">
+			{{ tax }}
+		</md-option>
+	</md-select>
+
+	<md-select placeholder="Subtract Stock">
+		<md-option value="Yes"> Yes </md-option>
+		<md-option value="No"> No </md-option>
+	</md-select>
+
+	<md-select placeholder="Out Of Stock Status">
+		<md-option *ngFor="let status of ['2-3 Days', 'In Stock', 'Out Of Stock', 'Pre-Order']" value="{{status}}">
+			{{ status }}
+		</md-option>
+	</md-select>
+
+	<md-form-field [ngStyle]="{'width': '300px'}">
+		<input mdInput [mdDatepicker]="picker" placeholder="Date Available">
+		<md-datepicker-toggle mdSuffix [for]="picker"> </md-datepicker-toggle>
+		<md-datepicker #picker> </md-datepicker>
+	</md-form-field>
+</div>
