--- a/src/app/back/admin/pages/subscription-plan/subscription-plan-list.component.html
+++ b/src/app/back/admin/pages/subscription-plan/subscription-plan-list.component.html
@@ -33,9 +33,9 @@
 	</ng-container>
 
 	<!-- No of Products Column -->
-	<ng-container cdkColumnDef="no_of_products">
-		<md-header-cell *cdkHeaderCellDef md-sort-header> No. of Products </md-header-cell>
-		<md-cell *cdkCellDef="let row"> {{row.no_of_products}} </md-cell>
+	<ng-container cdkColumnDef="no_of_days">
+		<md-header-cell *cdkHeaderCellDef md-sort-header> Number Of Days </md-header-cell>
+		<md-cell *cdkCellDef="let row"> {{row.no_of_days}} </md-cell>
 	</ng-container>
 
 	<!-- Price Column -->
