--- a/src/app/front/pages/private-sale/private-sale.component.html
+++ b/src/app/front/pages/private-sale/private-sale.component.html
@@ -14,4 +14,8 @@
 			</md-card>
 		</md-grid-tile>
 	</md-grid-list>
+
+	<div fxLayout="row" fxLayoutAlign="center start">
+		<button md-button class="more-button"> More Stores </button>
+	</div>
 </div>
