--- a/src/app/front/pages/private-sale/private-sale.component.scss
+++ b/src/app/front/pages/private-sale/private-sale.component.scss
@@ -21,5 +21,11 @@
 	    border: 1px solid #ddd;
 	    text-transform: uppercase;
 	    color: #02f8cf;
+	    margin: 0px;
 	}
+}
+
+.more-button {
+	border: 1px solid #f00;
+	color: #f00;
 }
