--- a/src/app/back/admin/pages/bloggers/bloggers-list.component.scss
+++ b/src/app/back/admin/pages/bloggers/bloggers-list.component.scss
@@ -13,6 +13,15 @@
     }
 }
 
+.avatar {
+    height: 50px;
+    border-radius: 5px;
+}
+
+.mat-cell {
+    padding: 5px 0px;
+}
+
 .mat-select {
 	margin-top: 1.2em;
     margin-bottom: 1.8em;
