--- a/src/styles.scss
+++ b/src/styles.scss
@@ -150,6 +150,10 @@ admin {
 		box-shadow: 0 8px 10px -5px rgba(0,0,0,.2), 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12);
 	}
 
+	.mat-table {
+		border: 1px solid #ddd;
+	}
+
 	.title {
 	    border-top: 2px solid #777;
 	    border-bottom: 1px solid #ddd;
