--- a/src/app/back/admin/pages/social-links/social-links.component.html
+++ b/src/app/back/admin/pages/social-links/social-links.component.html
@@ -1,3 +1,11 @@
+<div class="title">
+	<h3 fxLayout="row" fxLayoutAlign="start center">
+		<md-icon [ngStyle]="{'margin-right': '10px'}">list</md-icon> 
+		<span> Social icons </span>
+	</h3>
+</div>
+
+
 <md-table [dataSource]="dataSource">
 	<ng-container mdColumnDef="icon">
 		<md-header-cell *mdHeaderCellDef> SOCIAL LINKS </md-header-cell>
