--- a/src/app/back/admin/pages/partners/partners-form.component.html
+++ b/src/app/back/admin/pages/partners/partners-form.component.html
@@ -1,7 +1,7 @@
 <div class="title">
 	<h3 fxLayout="row" fxLayoutAlign="start center">
 		<md-icon [ngStyle]="{'margin-right': '10px'}">list</md-icon> 
-		<span> Partners </span>
+		<span> Slideshow </span>
 	</h3>
 </div>
 
@@ -18,11 +18,19 @@
 
 <md-table #table [dataSource]="dataSource" mdSort [ngStyle]="{'margin-top': '10px'}">
 
-	<!-- Title Column -->
-	<ng-container cdkColumnDef="title">
-		<md-header-cell *cdkHeaderCellDef md-sort-header> Title </md-header-cell>
+	<!-- Name Column -->
+	<ng-container cdkColumnDef="name">
+		<md-header-cell *cdkHeaderCellDef md-sort-header> Name </md-header-cell>
 		<md-cell *cdkCellDef="let row; let i = index">
-			<input *ngIf="!row.last" class="form-control" [(ngModel)]="partnersList[i].title" placeholder="Title">
+			<input class="form-control" [(ngModel)]="slideshowList[i].name" placeholder="Name">
+		</md-cell>
+	</ng-container>
+
+	<!-- Flag Column -->
+	<ng-container cdkColumnDef="flag">
+		<md-header-cell *cdkHeaderCellDef md-sort-header [ngStyle]="{'flex': 'none', 'width': '80px'}"> Locale </md-header-cell>
+		<md-cell *cdkCellDef="let row; let i = index" [ngStyle]="{'flex': 'none', 'width': '80px'}">
+			<span class="flag-icon flag-icon-{{slideshowList[i].locale}}"> </span>
 		</md-cell>
 	</ng-container>
 
@@ -30,15 +38,15 @@
 	<ng-container cdkColumnDef="link">
 		<md-header-cell *cdkHeaderCellDef md-sort-header> Link </md-header-cell>
 		<md-cell *cdkCellDef="let row; let i = index">
-			<input *ngIf="!row.last" class="form-control" [(ngModel)]="partnersList[i].link" placeholder="Link">
+			<input class="form-control" [(ngModel)]="slideshowList[i].link" placeholder="Link">
 		</md-cell>
 	</ng-container>
 
 	<!-- Image Column -->
 	<ng-container cdkColumnDef="image">
-		<md-header-cell *cdkHeaderCellDef md-sort-header [ngStyle]="{'flex': 'none', 'width': '120px'}"> Image </md-header-cell>
-		<md-cell fxLayout="row" *cdkCellDef="let row" [ngStyle]="{'flex': 'none', 'width': '120px'}">
-			<div *ngIf="!row.last" class="image" fxLayout="row" fxLayoutAlign="start center">
+		<md-header-cell *cdkHeaderCellDef md-sort-header> Image </md-header-cell>
+		<md-cell fxLayout="row" *cdkCellDef="let row">
+			<div class="image" fxLayout="row" fxLayoutAlign="start center">
 				<img width="100" height="100" src="{{ row.image }}" (click)="togglePopover($event)">
 				<div class="popover hidden" role="tooltip">
 					<div class="popover-arrow"> </div>
@@ -54,21 +62,18 @@
 
 	<!-- Sort Order Column -->
 	<ng-container cdkColumnDef="sort_order">
-		<md-header-cell *cdkHeaderCellDef md-sort-header [ngStyle]="{'flex': 'none', 'width': '100px'}"> Sort Order </md-header-cell>
-		<md-cell fxLayout="row" *cdkCellDef="let row; let i = index" [ngStyle]="{'flex': 'none', 'width': '100px'}">
-			<input *ngIf="!row.last" class="form-control" [(ngModel)]="partnersList[i].sort_order" placeholder="Sort Order">
+		<md-header-cell *cdkHeaderCellDef md-sort-header> Sort Order </md-header-cell>
+		<md-cell fxLayout="row" *cdkCellDef="let row; let i = index">
+			<input class="form-control" [(ngModel)]="slideshowList[i].sort_order" placeholder="Sort Order">
 		</md-cell>
 	</ng-container>
 
 	<!-- Action Column -->
 	<ng-container cdkColumnDef="action">
-		<md-header-cell *cdkHeaderCellDef md-sort-header [ngStyle]="{'flex': 'none', 'width': '40px'}"> </md-header-cell>
-		<md-cell fxLayout="row" *cdkCellDef="let row; let i = index" [ngStyle]="{'flex': 'none'}">
-			<button md-button *ngIf="row.last" class="action-button" (click)="addRow()" [ngStyle]="{'background': '#1e91cf', 'color': '#1e91cf'}">
-				<md-icon [ngStyle]="{'color': '#fff'}">add_circle</md-icon>
-			</button>
-			<button md-button *ngIf="!row.last" class="action-button" (click)="removeRow(i)" [ngStyle]="{'background': '#f56b6b', 'color': '#f56b6b'}">
-				<md-icon [ngStyle]="{'color': '#fff'}">remove_circle</md-icon>
+		<md-header-cell *cdkHeaderCellDef md-sort-header> Action </md-header-cell>
+		<md-cell fxLayout="row" *cdkCellDef="let row; let i = index">
+			<button md-button (click)="removeRow(i)" [ngStyle]="{'background': '#f56b6b', 'color': '#f56b6b'}">
+				<md-icon [ngStyle]="{'color': '#fff'}">remove_circle</md-icon> <span [ngStyle]="{'color': '#fff'}"> Remove </span>
 			</button>
 		</md-cell>
 	</ng-container>	
