--- a/src/app/back/admin/pages/slideshow/slideshow-form.component.html
+++ b/src/app/back/admin/pages/slideshow/slideshow-form.component.html
@@ -7,7 +7,7 @@
 
 <div fxLayout="column" fxLayoutAlign="start center">
 	<md-form-field>
-		<input mdInput placeholder="Banner Name">
+		<input mdInput placeholder="Banner Name*">
 	</md-form-field>
 
 	<md-select placeholder="Status">
