Form submit buttons update

--- a/src/app/components/back/admin/pages/buyers/buyers-form.component.html
+++ b/src/app/components/back/admin/pages/buyers/buyers-form.component.html
@@ -79,7 +79,7 @@
 		<md-option value="No"> No </md-option>
 	</md-select>
 
-	<div class="submit-button" fxLayout="row" fxLayoutAlign="end center">
-		<button md-button [ngStyle]="{'background': 'rgb(0, 132, 71)', 'color': '#fff'}"> Create Buyer </button>
+	<div fxLayout="row" fxLayoutAlign="end center">
+		<button md-button class="submit-button"> Save Buyer </button>
 	</div>
 </form>
