--- a/src/app/components/back/admin/pages/emh-beauty-box/emh-beauty-box-form.component.html
+++ b/src/app/components/back/admin/pages/emh-beauty-box/emh-beauty-box-form.component.html
@@ -47,4 +47,8 @@
 			<admin-product-tab-reward-points> </admin-product-tab-reward-points>
 		</md-tab>
 	</md-tab-group>
+
+	<div fxLayout="row" fxLayoutAlign="end center">
+		<button md-button class="submit-button"> Save Product </button>
+	</div>
 </form>
