--- a/src/app/components/back/admin/pages/news/news-form.component.html
+++ b/src/app/components/back/admin/pages/news/news-form.component.html
@@ -21,4 +21,8 @@
 	<md-form-field>
 		<input mdInput placeholder="Category">
 	</md-form-field>
+
+	<div fxLayout="row" fxLayoutAlign="end center">
+		<button md-button class="submit-button"> Save News </button>
+	</div>
 </form>
