--- a/src/app/components/back/admin/pages/categories/categories-form.component.html
+++ b/src/app/components/back/admin/pages/categories/categories-form.component.html
@@ -19,4 +19,8 @@
 			<admin-category-tab-fees [fees]="form.controls.fees"> </admin-category-tab-fees>
 		</md-tab>
 	</md-tab-group>
+
+	<div fxLayout="row" fxLayoutAlign="end center">
+		<button md-button class="submit-button"> Save Categories </button>
+	</div>
 </form>
